--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-src/packages
+# exclude all dot files except .git, appveyor and travis files
+.*
+!.git*
+!.appveyor*
+!.travis.yml
+
+# exclude binaries and temporary files
+bin/
+bin_plugs/
+intermediate/
+intermediate_plugs/
+lib/
+*.aps
+*.user
+*.PVS-Studio.*
