--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/pugixml/src
     ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
-    /usr/include/SDL2
+    ${SDL_INCLUDE_DIR}
 )
 
 add_definitions(-DXRCORE_EXPORTS)
@@ -28,9 +28,6 @@ add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 #this is a temporary solution until find_package will not be fixed
-set(CRYPTO_LIBRARY crypto++)
-set(PUGIXML_LIBRARY pugixml)
 set(TBB_LIBRARIES tbb tbbmalloc_proxy tbbmalloc)
-set(SDL2_LIB SDL2)
 
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIB} ${LZO_LIBRARY} ${CRYPTO_LIBRARY} ${PUGIXML_LIBRARY} ${TBB_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${SDL_LIBRARIES} ${LZO_LIBRARY} ${CRYPTO++_LIBRARIES} ${PUGIXML_LIBRARY} ${TBB_LIBRARIES})
