fix some linux compilation errors, hide xrSASH under WINDOWS define (OpenAutomate dont build on linux), remove Device_wndproc

--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -1,25 +1,26 @@
 project(xrCore)
 
 list(APPEND DIRS
-	"."
-	"Animation"
-	"Compression"
-	"Containers"
-	"Crypto"
-	"Math"
-	"Media"
-	"PostProcess"
-	"Text"
-	"Threading"
-	"XML"
-	)
+    "."
+    "Animation"
+    "Compression"
+    "Containers"
+    "Crypto"
+    "Math"
+    "Media"
+    "PostProcess"
+    "Text"
+    "Threading"
+    "XML"
+    )
 
 add_dir("${DIRS}")
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/pugixml/src
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    ${CRYPTO++_INCLUDE_DIR}
+    #${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
     ${SDL_INCLUDE_DIR}
 )
 
@@ -30,4 +31,4 @@ set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 #this is a temporary solution until find_package will not be fixed
 set(TBB_LIBRARIES tbb tbbmalloc_proxy tbbmalloc)
 
-target_link_libraries(${PROJECT_NAME} ${SDL_LIBRARIES} ${LZO_LIBRARY} ${CRYPTO++_LIBRARIES} ${PUGIXML_LIBRARY} ${TBB_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${SDL_LIBRARIES} ${LZO_LIBRARY} crypto++ ${PUGIXML_LIBRARY} ${TBB_LIBRARIES})
