xrMiscMath: add to linux build

--- a/src/xrCDB/CMakeLists.txt
+++ b/src/xrCDB/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(xrCDB)
 
 list(APPEND DIRS
-	"."
-	)
+    "."
+    )
 
 add_dir("${DIRS}")
 
@@ -11,4 +11,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/.
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-target_link_libraries(${PROJECT_NAME} xrCore OPCODE xrAPI)
+target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath OPCODE xrAPI)
