--- a/src/xrParticles/CMakeLists.txt
+++ b/src/xrParticles/CMakeLists.txt
@@ -1,15 +1,15 @@
 project(xrParticles)
 
 list(APPEND DIRS
-	"."
-	)
+    "."
+    )
 
 add_dir("${DIRS}")
 
 include_directories(
-	${CMAKE_CURRENT_SOURCE_DIR}/.. 
-	${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
-	)
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    )
 
 #list(REMOVE_ITEM ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/./xr_cda.cpp")
 #list(REMOVE_ITEM ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/./xr_cda.h")
@@ -18,4 +18,4 @@ add_definitions(-DXR_PARTICLES_EXPORTS)
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-target_link_libraries(${PROJECT_NAME} xrCore)
+target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath)
