xrCore: remove unused include from CMakeLists.txt xrEngine: hide network calls under defines xrPhysics: add nesessary cpp in CMakeLists.txt, add include

--- a/src/xrPhysics/CMakeLists.txt
+++ b/src/xrPhysics/CMakeLists.txt
@@ -15,6 +15,9 @@ include_directories(
     /usr/include/SDL2
     )
 
+list(APPEND ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/../xrServerEntities/PHNetState.cpp")
+list(APPEND ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/../xrServerEntities/PHNetState.h")
+
 list(REMOVE_ITEM ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/tri-colliderknoopc/dcTriListCollider.cpp")
 #list(REMOVE_ITEM ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/./xr_cda.h")
 
