--- a/Externals/CMakeLists.txt
+++ b/Externals/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_subdirectory(LuaJIT)
 add_subdirectory(luabind)
-add_subdirectory(lzo)
+#add_subdirectory(lzo)
 add_subdirectory(cximage)
-add_subdirectory(NVTT)
+#add_subdirectory(NVTT)
 add_subdirectory(OPCODE)
 add_subdirectory(ode)
 #add_subdirectory(pugixml)
