--- a/src/xrScriptEngine/CMakeLists.txt
+++ b/src/xrScriptEngine/CMakeLists.txt
@@ -12,4 +12,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/.
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-target_link_libraries(${PROJECT_NAME} xrAPI xrCore luabind luajit)
+target_link_libraries(${PROJECT_NAME} xrAPI xrCore luabind ${LUA_LIBRARIES})
