--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ set(LUA_INCLUDE_DIR Externals/LuaJIT/src)
 
 set(LUA_FOUND 1)
 if (NOT WIN32)
+find_package(FreeImage REQUIRED)
+find_package(LockFile REQUIRED)
+find_package(OpenAL REQUIRED)
 find_package(Crypto++ REQUIRED)
 find_package(PugiXML REQUIRED)
 find_package(Theora REQUIRED)
@@ -41,8 +44,7 @@ find_package(OGG REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(LZO REQUIRED)
 find_package(JPEG REQUIRED)
-#this is a temporary solution until find_package will not be fixed
-set(TBB_LIBRARIES tbb tbbmalloc_proxy tbbmalloc)
+find_package(TBB REQUIRED)
 endif()
 
 include_directories(${LUA_INCLUDE_DIR})
