xrEngine/xr_input.h|cpp: cleanup Removed xr_input_xinput.h|cpp, they are not needed anymore

--- a/src/xrEngine/xrEngine.vcxproj
+++ b/src/xrEngine/xrEngine.vcxproj
@@ -276,7 +276,6 @@
     <ClInclude Include="xr_collide_form.h" />
     <ClInclude Include="xr_efflensflare.h" />
     <ClInclude Include="xr_input.h" />
-    <ClInclude Include="xr_input_xinput.h" />
     <ClInclude Include="XR_IOConsole.h" />
     <ClInclude Include="xr_ioc_cmd.h" />
     <ClInclude Include="xr_object.h" />
@@ -383,8 +382,7 @@
     <ClCompile Include="xrTheora_Surface.cpp" />
     <ClCompile Include="xr_collide_form.cpp" />
     <ClCompile Include="xr_efflensflare.cpp" />
-    <ClCompile Include="Xr_input.cpp" />
-    <ClCompile Include="xr_input_xinput.cpp" />
+    <ClCompile Include="xr_input.cpp" />
     <ClCompile Include="XR_IOConsole.cpp" />
     <ClCompile Include="XR_IOConsole_callback.cpp" />
     <ClCompile Include="XR_IOConsole_control.cpp" />
