--- a/Externals/OPCODE/CMakeLists.txt
+++ b/Externals/OPCODE/CMakeLists.txt
@@ -1,11 +1,15 @@
 project(OPCODE)
 add_dir (
-	"."
-	)
+    "."
+    )
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include)
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../src
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    ${SDL_INCLUDE_DIR}
+    )
 
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
