--- a/src/xrCDB/CMakeLists.txt
+++ b/src/xrCDB/CMakeLists.txt
@@ -6,9 +6,13 @@ list(APPEND DIRS
 
 add_dir("${DIRS}")
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include /usr/include/SDL2)
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    ${SDL_INCLUDE_DIR}
+    )
 
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath OPCODE xrAPI)
+target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath OPCODE xrAP ${SDL_LIBRARIES})
