--- a/src/xrCDB/CMakeLists.txt
+++ b/src/xrCDB/CMakeLists.txt
@@ -15,4 +15,4 @@ include_directories(
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath OPCODE xrAP ${SDL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath OPCODE xrAPI ${SDL_LIBRARIES})
