--- a/src/utils/xrLCUtil/CMakeLists.txt
+++ b/src/utils/xrLCUtil/CMakeLists.txt
@@ -1,15 +1,16 @@
 project(xrLCUtil)
 
 list(APPEND DIRS
-	"."
-	)
+    "."
+    )
 
 add_dir("${DIRS}")
 
 include_directories(
-	${CMAKE_CURRENT_SOURCE_DIR}/../.. 
-	${CMAKE_CURRENT_SOURCE_DIR}/../../../sdk/include
-	)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../sdk/include
+    ${SDL_INCLUDE_DIRS}
+    )
 
 list(REMOVE_ITEM ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/./LevelCompilerLoggerWindow.cpp")
 list(REMOVE_ITEM ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/./LevelCompilerLoggerWindow.hpp")
