--- a/src/xrAICore/CMakeLists.txt
+++ b/src/xrAICore/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/luabind
     ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    ${SDL_INCLUDE_DIRS}
     )
 
 #foreach(header ${${PROJECT_NAME}__INCLUDES})
