--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/pugixml/src
     #${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
-    ${SDL_INCLUDE_DIR}
+    ${SDL_INCLUDE_DIRS}
     ${TBB_INCLUDE_DIRS}
 )
 
