CMake: fix SDL include for xrPhysics

--- a/src/xrPhysics/CMakeLists.txt
+++ b/src/xrPhysics/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/ode/include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
-    /usr/include/SDL2
+    ${SDL_INCLUDE_DIRS}
     )
 
 list(APPEND ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/../xrServerEntities/PHNetState.cpp")
