--- a/src/utils/xrSE_Factory/xrSE_Factory.vcxproj
+++ b/src/utils/xrSE_Factory/xrSE_Factory.vcxproj
@@ -610,7 +610,7 @@
     <ProjectReference Include="$(xrExternals)luabind.vcxproj">
       <Project>{ccd4afae-aa10-42c6-a452-fdee497ccdf1}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Externals\luajit\src\luajit.vcxproj">
+    <ProjectReference Include="..\..\..\Externals\LuaJIT-proj\LuaJIT.vcxproj">
       <Project>{632aeeb6-dc06-4e15-9551-b2b09a4b73c5}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Externals\pugixml_vs2017_static.vcxproj">
