--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,6 +49,18 @@ artifacts:
   name: OpenXRay.Rx86.7z
 - path: res/OpenXRay.Rx64.7z
   name: OpenXRay.Rx64.7z
+- path: res/Symbols.Dx86.7z
+  name: Symbols.Dx86.7z
+- path: res/Symbols.Dx64.7z
+  name: Symbols.Dx64.7z
+- path: res/Symbols.Mx86.7z
+  name: Symbols.Mx86.7z
+- path: res/Symbols.Mx64.7z
+  name: Symbols.Mx64.7z
+- path: res/Symbols.Rx86.7z
+  name: Symbols.Rx86.7z
+- path: res/Symbols.Rx64.7z
+  name: Symbols.Rx64.7z
 
 deploy:
 - provider: GitHub
@@ -57,6 +69,8 @@ deploy:
   description: $(APPVEYOR_REPO_COMMIT_MESSAGE)
   auth_token:
     secure: kGVniXDR926BfVcA97y25BzALbijvgboBsozZzY9yc8RPz15Q4YG474h7vl14/J1
-  artifact: OpenXRay.Dx86.7z, OpenXRay.Dx64.7z, OpenXRay.Mx86.7z, OpenXRay.Mx64.7z, OpenXRay.Rx86.7z, OpenXRay.Rx64.7z
+  artifact:
+    OpenXRay.Dx86.7z, OpenXRay.Dx64.7z, OpenXRay.Mx86.7z, OpenXRay.Mx64.7z, OpenXRay.Rx86.7z, OpenXRay.Rx64.7z,
+    Symbols.Dx86.7z, Symbols.Dx64.7z, Symbols.Mx86.7z, Symbols.Mx64.7z, Symbols.Rx86.7z, Symbols.Rx64.7z
   draft: true
   force_update: true
