xrGame, xrServerEntities: fix some temaplate for linux build

--- a/src/xrGame/CMakeLists.txt
+++ b/src/xrGame/CMakeLists.txt
@@ -3,8 +3,34 @@ project(xrGame)
 list(APPEND DIRS
     "."
     "ai"
+    "ai/crow"
+    "ai/monsters"
+    "ai/monsters/basemonster"
+    "ai/monsters/bloodsucker"
+    "ai/monsters/boar"
+    "ai/monsters/burer"
+    "ai/monsters/cat"
+    "ai/monsters/chimera"
+    "ai/monsters/controller"
+    "ai/monsters/dog"
+    "ai/monsters/flesh"
+    "ai/monsters/fracture"
+    "ai/monsters/group_states"
+    "ai/monsters/poltergeist"
+    "ai/monsters/pseudodog"
+    "ai/monsters/pseudogigant"
+    "ai/monsters/rats"
+    "ai/monsters/snork"
+    "ai/monsters/states"
+    "ai/monsters/tushkano"
+    "ai/monsters/zombie"
+    "ai/phantom"
+    "ai/stalker"
+    "ai/trader"
+    "CdkeyDecode"
     "ik"
     "ui"
+    "gamespy"
     "../xrServerEntities"
     )
 
@@ -17,7 +43,6 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/luabind
     ${SDL_INCLUDE_DIRS}
     )
-
 list(REMOVE_ITEM ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/ui/UIListWnd.h")
 
 list(REMOVE_ITEM ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/ui/UIListWnd.h")
