xrRenderPC_GL: fix case-sensitive includes

--- a/src/Layers/xrRenderPC_GL/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_GL/CMakeLists.txt
@@ -1,17 +1,18 @@
 project(xrRenderPC_GL)
 
 list(APPEND DIRS
-	"."
-	)
+    "."
+    )
 
 
 add_dir("${DIRS}")
 
 include_directories(
-	${CMAKE_CURRENT_SOURCE_DIR}/../..
-	${CMAKE_CURRENT_SOURCE_DIR}/../../../Externals/luabind
-	${CMAKE_CURRENT_SOURCE_DIR}/../../../sdk/include
-	)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../Externals/luabind
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../sdk/include
+    ${SDL_INCLUDE_DIRS}
+    )
 
 #list(REMOVE_ITEM ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/./LevelCompilerLoggerWindow.cpp")
 #list(REMOVE_ITEM ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/./LevelCompilerLoggerWindow.hpp")
